src/objects/DocenteMateria__c.object
<CustomObject>
    <fields>
        <fullName>Docente__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Docente</label>
        <referenceTo>Docente__c</referenceTo>
        <relationshipLabel>Docentes Materias</relationshipLabel>
        <relationshipName>DocentesMaterias</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grupo__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Grupo</label>
        <referenceTo>Grupo__c</referenceTo>
        <relationshipLabel>Docentes Materias</relationshipLabel>
        <relationshipName>Docentes_Materias</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Materia__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Materia</label>
        <referenceTo>Materia__c</referenceTo>
        <relationshipLabel>Docentes Materias</relationshipLabel>
        <relationshipName>DocentesMaterias</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Docente Materia</label>
    <nameField>
        <displayFormat>DM-{000000}</displayFormat>
        <label>Nombre de Docente Materia</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Docentes Materias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>